add save and reset scores functionality; update player loading and editing methods